styled pagination links

--- a/app/views/industries/index.html.haml
+++ b/app/views/industries/index.html.haml
@@ -8,5 +8,5 @@
         = link_to industry.name, industry_tickers_path(industry, industry.tickers)
         %br
 %br
-.page_links
+.page_links.apple_pagination
   = will_paginate @industries
