--- a/app/views/sectors/index.html.haml
+++ b/app/views/sectors/index.html.haml
@@ -8,5 +8,5 @@
         = link_to sector.name, sector_tickers_path(sector, sector.tickers)
         %br
 %br
-.page_links
+.page_links.apple_pagination
   = will_paginate @sectors
