--- a/app/views/securities/index.html.haml
+++ b/app/views/securities/index.html.haml
@@ -8,8 +8,8 @@
         = link_to security.security_type, security_tickers_path(security, security.tickers)
         %br
         - if current_admin?
-          %p{class: "security_#{security.id}"} 
-            = link_to "Delete", admin_security_path(security), method: "delete"
+          %p
+            = link_to "Delete", admin_security_path(security), method: "delete", id: "del_security_#{security.id}"
   .row.security_links
     - if current_admin?
       %p
