--- a/app/views/securities/index.html.haml
+++ b/app/views/securities/index.html.haml
@@ -10,6 +10,8 @@
         - if current_admin?
           %p
             = link_to "Delete", admin_security_path(security), method: "delete", id: "del_security_#{security.id}"
+          %p 
+            = link_to "Update", edit_admin_security_path(security), id: "update_security_#{security.id}"
   .row.security_links
     - if current_admin?
       %p
