move admin content to admin controller

--- a/app/views/admin/securities/_form.html.haml
+++ b/app/views/admin/securities/_form.html.haml
@@ -1,5 +1,5 @@
 .container
-  = form_for @security do |f|
+  = form_for @security, :url => admin_securities_path do |f|
     %p
     = f.label :security_type     
     %br
