finish add crud sectors

--- a/app/views/admin/sectors/edit.html.haml
+++ b/app/views/admin/sectors/edit.html.haml
@@ -1,4 +1,9 @@
 %h3 Edit
 = @sector.name
 %br
-= render partial: "form"
+= form_for @sector, :url => admin_sector_path do |f|
+  %p 
+    = f.label :name
+    = f.text_field :name 
+  %br
+  = f.submit
