--- a/app/views/tickers/show.html.haml
+++ b/app/views/tickers/show.html.haml
@@ -1,6 +1,11 @@
 .container-fluid
   %h3
   = "#{@ticker.symbol}: #{@ticker.description}"
+  %h6 Tags 
+  %p 
+    
+  %p 
+    = link_to "Create Tags", new_ticker_tag_path(@ticker)
   .row
     .col-md-12
       - if @trading_data
