--- a/app/views/securities/index.html.haml
+++ b/app/views/securities/index.html.haml
@@ -5,10 +5,8 @@
     - @securities.each do |security|
       .security.col-md-4
         %p
-        = link_to security.security_type, security_tickers_path(security, security.tickers)
-        %br
+          = link_to security.security_type, security_tickers_path(security, security.tickers), class: "category-link"
         - if current_user.admin?
           %p 
-            = link_to "Edit", edit_admin_security_path(security), id: "edit_security_#{security.id}"
-          %p 
-            = link_to "Delete", admin_security_path(security), method: "delete", id: "del_security_#{security.id}"
+            = link_to "Edit", edit_admin_security_path(security), id: "edit_security_#{security.id}", class: "btn btn-sm btn-warning"
+            = link_to "Delete", admin_security_path(security), method: "delete", id: "del_security_#{security.id}", class: "btn btn-sm btn-danger"
