--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -7,7 +7,7 @@
     %p
     = f.label :password
     %br
-    = f.text_field :password
+    = f.password_field :password
     %br
     = f.submit "Create Account"
 
