--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -55,3 +55,7 @@
 .category-link
   font-family: 'Inconsolata', monospace
   font-size: 28px
+
+.tag-list
+  font-family: 'Inconsolata', monospace
+  font-size: 16px
