--- a/app/views/tickers/show.html.haml
+++ b/app/views/tickers/show.html.haml
@@ -1,14 +1,15 @@
 .container-fluid
-  %h3
-  = "#{@ticker.symbol}: #{@ticker.description}"
-  %h6 Tags 
-  %p 
+  %h2
+    = "#{@ticker.symbol}: #{@ticker.description}"
+  %h4 Tags 
+  %p.tag-list 
     = @ticker.tag_list
   %p
     = render partial: "form"
   .row
     .col-md-12
       - if @trading_data
+        %h2 Last Trading Day's Quote
         %table.table-striped.table-bordered
           %tr
             %td Open:
@@ -32,3 +33,23 @@
             %td= @trading_data.week_52_low
       - else
         %p No Trading Data Available
+    %br
+    .col-md-12
+      - if @ticker.cash_flow_statements
+        %h2 Company's Cash Flow
+        -@ticker.cash_flow_statements.each do |statement|
+          %h4
+            = statement.historical_date.date
+          %table.table-striped.table-bordered
+            %tr
+              %td Beginning Cash Position
+              %td Capital Expenditure
+              %td Cash Dividends Paid
+              %td Change in Account Payable
+              %td Change in Inventory
+            %tr
+              %td= statement.beginning_cash_position
+              %td= statement.capital_expenditure
+              %td= statement.cash_dividends_paid
+              %td= statement.change_in_account_payable
+              %td= statement.change_in_inventory
