initial changes to add search function

--- a/app/views/tickers/index.html.haml
+++ b/app/views/tickers/index.html.haml
@@ -1,4 +1,9 @@
-%h2 All Stocks and ETFs
+.container-fluid
+  .row
+    .col-md-6
+      %h2 All Stocks and ETFs
+    .col-md-6
+      = render partial: "search"
 %br
 .container-fluid
   .row
