--- a/app/views/tickers/_search.html.haml
+++ b/app/views/tickers/_search.html.haml
@@ -1,5 +1,4 @@
-= form_tag(ticker_path(@tickers[0]), method: "get") do |f|
-  %p 
-    = f.label :symbol
-    = f.text_field :symbol
-    = f.submit "Search"
+= form_tag(search_path, method: "get") do |f|
+  %p Type in Symbol: 
+  = text_field_tag "symbol"
+  = submit_tag "Search"
