add search passing search spec test

--- a/app/views/tickers/index.html.haml
+++ b/app/views/tickers/index.html.haml
@@ -3,7 +3,7 @@
     .col-md-6
       %h2 All Stocks and ETFs
     .col-md-6
-      = render partial: "search"
+      = render partial: "tickers/search"
 %br
 .container-fluid
   .row
