finish cash flow table

--- a/app/views/tickers/show.html.haml
+++ b/app/views/tickers/show.html.haml
@@ -53,3 +53,95 @@
               %td= statement.cash_dividends_paid
               %td= statement.change_in_account_payable
               %td= statement.change_in_inventory
+            %tr
+              %td Change in Other Working Capital
+              %td Change in Payable
+              %td Change in Payables and Accrued Expense
+              %td Change in Receivables
+              %td Change in Working Capital
+            %tr
+              %td= statement.change_in_other_working_capital
+              %td= statement.change_in_payable
+              %td= statement.change_in_payables_and_accrued_expense
+              %td= statement.change_in_receivables
+              %td= statement.change_in_working_capital
+            %tr
+              %td Change in Cash
+              %td Common Stock Issuance
+              %td Common Stock Payments
+              %td Deferred Income Tax
+              %td Deferred Tax
+            %tr
+              %td= statement.change_in_cash
+              %td= statement.common_stock_issuance
+              %td= statement.common_stock_payments
+              %td= statement.deferred_income_tax
+              %td= statement.deferred_tax
+            %tr
+              %td Depreciation Amortization Depletion
+              %td Depreciation and Amortization
+              %td End Cash Position
+              %td Financing Cash Flow
+              %td Free Cash Flow
+            %tr
+              %td= statement.depreciation_amortization_depletion
+              %td= statement.depreciation_and_amortization
+              %td= statement.end_cash_position
+              %td= statement.financing_cash_flow
+              %td= statement.free_cash_flow
+            %tr
+              %td Income Tax Paid Supplemental Data
+              %td Interest Paid Supplemental Data
+              %td Investing Cash Flow
+              %td Issuance of Capital Stock
+              %td Net Business Purchase and Sale
+            %tr
+              %td= statement.income_tax_paid_supplemental_data
+              %td= statement.interest_paid_supplemental_data
+              %td= statement.investing_cash_flow
+              %td= statement.issuance_of_capital_stock
+              %td= statement.net_business_purchase_and_sale
+            %tr
+              %td Net Common Stock Issuance
+              %td Net Income
+              %td Net Income From Continuing Operations
+              %td Net Intangibles Purchase and Sale
+              %td Net Investment Purchase and Sale
+            %tr
+              %td= statement.net_common_stock_issuance
+              %td= statement.net_income
+              %td= statement.net_income_from_continuing_operations
+              %td= statement.net_intangibles_purchase_and_sale
+              %td= statement.net_investment_purchase_and_sale
+            %tr
+              %td Net Issuance Payments of Debt
+              %td Net Other Financing Charges
+              %td Net Other Investing Charges
+              %td Net PPE Purchase and Sale
+              %td Net Short Term Debt Issuance
+            %tr
+              %td= statement.net_issuance_payments_of_debt
+              %td= statement.net_other_financing_charges
+              %td= statement.net_other_investing_changes
+              %td= statement.net_p_p_e_purchase_and_sale
+              %td= statement.net_short_term_debt_issuance
+            %tr
+              %td Operation Cash Flow
+              %td Other Non Cash Items
+              %td Purchase of Intangibles
+              %td Purchase of Investments
+              %td Purchase of PPE
+            %tr
+              %td= statement.operating_cash_flow
+              %td= statement.other_non_cash_items
+              %td= statement.purchase_of_intangibles
+              %td= statement.purchase_of_investment
+              %td= statement.purchase_of_p_p_e
+            %tr
+              %td Repurchase of Capital Stock
+              %td Sale of Investment
+              %td Stock Based Compensation
+            %tr
+              %td= statement.repurchase_of_capital_stock
+              %td= statement.sale_of_investment
+              %td= statement.stock_based_compensation
